@@ -1,9 +1,12 @@
 QXmpp 0.8.1 (UNRELEASED)
+------------------------
 
   - Use QString() instead of "" for default methods arguments, to enable
     building project which use QT_NO_CAST_FROM_ASCII.
+  - Add support for legacy SSL.
 
 QXmpp 0.8.0 (Mar 26, 2014)
+--------------------------
 
   - Fix QXmppServer incoming connections with Qt5 (issue 175).
   - Support for QXmppMessage extensions having tag names other than 'x'.
